@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-10T16:18:45Z",
+  "timestamp" : "2022-05-11T08:17:02Z",
   "count_outdated" : 264,
   "uniques_outdated" : 130,
-  "count" : 293,
-  "uniques" : 152,
+  "count" : 294,
+  "uniques" : 153,
   "clones" : [
     {
       "timestamp": "2022-05-01T00:00:00Z",
@@ -60,6 +60,13 @@
       "count_minmax": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2022-05-11T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
